--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Test3"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBPMpgZnvRwyiD47P-togXkkGLLAbJ64Jo"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
